[tool.poetry]
name = "pyedahelper"
version = "0.1.0"
description = "Python package that simplifies EDA."
authors = ["Ofer Mansour <mansour.ofer@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.1"
altair = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
